<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="411dp"
        android:layout_height="733dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#37AADD"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cookitTopic"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:ems="10"
                android:hint="Search Recipe"
                android:inputType="textPersonName"
                android:paddingLeft="30dp"
                android:text="Search Recipe"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topicMuffin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="185dp"
                    android:layout_weight="1"
                    android:text="@string/mufDesc"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="135dp"
            android:layout_height="165dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="150dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/muffin" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="10dp"
            android:text="@string/mufDesc"
            android:textColor="@android:color/background_dark" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="146dp">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="165dp"
                android:text="@string/topicMuffin"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp" />
        </FrameLayout>

        <Button
            android:id="@+id/button5"
            android:layout_width="74dp"
            android:layout_height="31dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="280dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/btnDelete1"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button"
            android:layout_width="74dp"
            android:layout_height="31dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="280dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/btnAdd1"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button6"
            android:layout_width="74dp"
            android:layout_height="31dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="460dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/btnAdd2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button7"
            android:layout_width="74dp"
            android:layout_height="31dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="655dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/btnAdd3"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="74dp"
            android:layout_height="31dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="460dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/btnDelete2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button3"
            android:layout_width="74dp"
            android:layout_height="31dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="655dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/btnDelete3"
            android:textColor="@android:color/white" />


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="135dp"
            android:layout_height="173dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="330dp"
            app:srcCompat="@drawable/spaghetti" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="335dp"
            android:text="@string/topicSpaghetti"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="520dp"
            android:text="@string/topicNasiguran"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="160dp"
            android:text="@string/topicMuffin"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="370dp"
            android:layout_marginEnd="10dp"
            android:text="@string/spaDesc"
            android:textColor="?android:attr/colorForeground" />


        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="555dp"
            android:layout_marginEnd="10dp"
            android:text="@string/nasiDesc"
            android:textColor="?android:attr/colorForeground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="808dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="135dp"
                android:layout_height="173dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="520dp"
                app:srcCompat="@drawable/Nasiguran" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>