<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:background="#828BA3"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="#00897B"
                android:fontFamily="monospace"
                android:paddingTop="15dp"
                android:text="@string/Edit_topic"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold"></TextView>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="229dp"
                android:background="#1E88E5"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="85dp"
                    android:layout_height="match_parent">

                </FrameLayout>

                <FrameLayout
                    android:layout_width="229dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="318dp"
                            android:layout_height="167dp">

                            <ImageView
                                android:layout_width="164dp"

                                android:layout_height="132dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginRight="35dp"
                                android:layout_marginTop="15dp"
                                android:src="@drawable/user"/>
                        </FrameLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="0dp"
                            android:text="@string/Auser_edit"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="30sp"
                            android:textStyle="bold"></TextView>
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="38dp"
                    android:layout_height="match_parent">

                </FrameLayout>

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="370dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/Edit_pic"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20dp"
            android:background="#DAD8DD"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:text="@string/Auser_name"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="20dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextEmailAddress4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:text="@string/Auser_location"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="20dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextEmailAddress5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:text="@string/Auser_email"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="20dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextEmailAddress6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:text="@string/Auser_password"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="20dp"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/Cancle_Btn"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:background="#000000"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="-60dp"
            android:background="#000000"
            android:text="@string/Save_Btn"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
